--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "mongo-cxx-driver"]
 	path = mongo-cxx-driver
 	url = https://github.com/mongodb/mongo-cxx-driver.git
+[submodule "SFML"]
+	path = SFML
+	url = https://github.com/SFML/SFML.git
+	branch = 2.6.x
