--- a/.github/workflows/ubuntu-test.yml
+++ b/.github/workflows/ubuntu-test.yml
@@ -1,6 +1,18 @@
 name: Test on Ubuntu
 on:
   workflow_dispatch:
+    inputs:
+      build:
+        description: 'Build project with Ubuntu'
+        required: false
+        type: boolean
+        default: true
+      test:
+        description: 'Run tests with Ubuntu'
+        required: false
+        type: boolean
+        default: true
+  
 jobs:
   Configuration:
     runs-on: ubuntu-latest
@@ -20,6 +32,8 @@ jobs:
         uses: ./.github/actions/build
         with:
           preset: ubuntu
+          build: ${{ inputs.build }}
+          test: ${{ inputs.test }}
     services:
       mongo:
         image: mongo:latest
