--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,9 +42,13 @@ set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 set(INSTALL_CONFIG_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
 
 if(NOT DEFINED ENV{EXTERNAL_PROJECT_DIR} AND NOT DEFINED EXTERNAL_PROJECT_DIR)
-    set(EXTERNAL_PROJECT_DIR "${CMAKE_SOURCE_DIR}/external" CACHE PATH "Where to file external projects" FORCE)
+    set(EXTERNAL_PROJECT_DIR "${CMAKE_SOURCE_DIR}/external"
+        CACHE PATH "Where to file external projects" FORCE
+        )
 elseif(DEFINED ENV{EXTERNAL_PROJECT_DIR} AND NOT DEFINED EXTERNAL_PROJECT_DIR)
-    set(EXTERNAL_PROJECT_DIR "$ENV{EXTERNAL_PROJECT_DIR}" CACHE PATH "Where to file external projects" FORCE)
+    set(EXTERNAL_PROJECT_DIR "$ENV{EXTERNAL_PROJECT_DIR}"
+        CACHE PATH "Where to file external projects" FORCE
+        )
 endif()
 
 message(STATUS "EXTERNAL_PROJECT_DIR: ${EXTERNAL_PROJECT_DIR}")
@@ -57,13 +61,13 @@ if(THIS_MULTI_CONFIG)
         string(TOUPPER ${build_type} build_type_upper)
         set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${build_type_upper}
             ${CMAKE_BINARY_DIR}/${build_type}/lib
-        )
+            )
         set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${build_type_upper}
             ${CMAKE_BINARY_DIR}/${build_type}/lib
-        )
+            )
         set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${build_type_upper}
             ${CMAKE_BINARY_DIR}/${build_type}/bin
-        )
+            )
     endforeach()
 endif()
 
