--- a/src/pingpong_game/CMakeLists.txt
+++ b/src/pingpong_game/CMakeLists.txt
@@ -3,9 +3,9 @@ project(pingpong_game)
 include(${CMAKE_CURRENT_LIST_DIR}/FetchLib.cmake)
 fetchlib()
 
-set(EXTERNAL_PROJECT_DIR)
-
-list(APPEND CMAKE_PREFIX_PATH "${EXTERNAL_PROJECT_DIR}/mongo-cxx-driver" "${EXTERNAL_PROJECT_DIR}/SFML")
+list(APPEND CMAKE_PREFIX_PATH "${EXTERNAL_PROJECT_DIR}/mongo-cxx-driver"
+     "${EXTERNAL_PROJECT_DIR}/SFML"
+     )
 find_package(mongocxx REQUIRED)
 find_package(SFML REQUIRED COMPONENTS graphics audio)
 
@@ -13,53 +13,54 @@ add_subdirectory(utility)
 
 file(GLOB SOURCE_FILES "${CMAKE_CURRENT_LIST_DIR}/*.cpp" "${CMAKE_CURRENT_LIST_DIR}/*.c")
 file(GLOB HEADER_FILES "${CMAKE_CURRENT_LIST_DIR}/include/*.hpp"
-    "${CMAKE_CURRENT_LIST_DIR}/include/*.h"
-)
+     "${CMAKE_CURRENT_LIST_DIR}/include/*.h"
+     )
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
 target_link_libraries(${PROJECT_NAME} PUBLIC pingpong_game_utility)
 target_include_directories(
     ${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}>
-)
+                           $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}>
+    )
 
 target_set_warnings(
     TARGET ${PROJECT_NAME} ENABLE ${ENABLE_WARNINGS} AS_ERRORS ${ENABLE_WARNINGS_AS_ERRORS}
-)
+    )
 
 set_target_properties(
     ${PROJECT_NAME}
     PROPERTIES
-    WINDOWS_EXPORT_ALL_SYMBOLS ON
-    PUBLIC_HEADER "${CMAKE_CURRENT_LIST_DIR}/include/PingPongGame.hpp"
-    PREFIX ""
-    FOLDER "PingPong Game"
-    VS_DEBUGGER_ENVIRONMENT "AUTHOR=DuyLD"
-)
+        WINDOWS_EXPORT_ALL_SYMBOLS ON
+        PUBLIC_HEADER "${CMAKE_CURRENT_LIST_DIR}/include/PingPongGame.hpp"
+        PREFIX ""
+        FOLDER "PingPong Game"
+        VS_DEBUGGER_ENVIRONMENT "AUTHOR=DuyLD"
+    )
 
-if(ENABLE_CLANG_TIDY AND(THIS_COMPILER_GCC OR THIS_COMPILER_CLANG OR THIS_COMPILER_CLANG_CL))
+if(ENABLE_CLANG_TIDY AND (THIS_COMPILER_GCC OR THIS_COMPILER_CLANG OR THIS_COMPILER_CLANG_CL))
     set_target_properties(
         ${PROJECT_NAME} PROPERTIES CXX_CLANG_TIDY
-        "clang-tidy;--config-file=${CMAKE_SOURCE_DIR}/.clang-tidy"
-    )
+                                   "clang-tidy;--config-file=${CMAKE_SOURCE_DIR}/.clang-tidy"
+        )
 endif()
 
 target_sources(
     ${PROJECT_NAME} PRIVATE FILE_SET ${PROJECT_NAME}_headers TYPE HEADERS FILES "${HEADER_FILES}"
-)
+    )
 
 if(THIS_OS_WINDOWS)
     add_custom_command(
         TARGET ${PROJECT_NAME}
         COMMENT " Copy OpenAL DLL "
         PRE_BUILD
-        COMMAND
-        ${CMAKE_COMMAND} -E copy
-        "${EXTERNAL_PROJECT_DIR}/SFML/bin/openal32.dll" $<TARGET_FILE_DIR:${PROJECT_NAME}>
+        COMMAND ${CMAKE_COMMAND} -E copy "${EXTERNAL_PROJECT_DIR}/SFML/bin/openal32.dll"
+                $<TARGET_FILE_DIR:${PROJECT_NAME}>
         VERBATIM
-    )
+        )
 
-    install(FILES "${EXTERNAL_PROJECT_DIR}/SFML/bin/openal32.dll" DESTINATION ${CMAKE_INSTALL_BINDIR})
+    install(
+        FILES "${EXTERNAL_PROJECT_DIR}/SFML/bin/openal32.dll" DESTINATION ${CMAKE_INSTALL_BINDIR}
+        )
 endif()
 
 set_directory_properties(PROPERTIES VS_STARTUP_PROJECT ${PROJECT_NAME})
@@ -71,4 +72,4 @@ install(
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
     PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME} COMPONENT PublicHeader
-)
+    )
