--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,6 +105,7 @@
     "--graphviz=docs/graph/graph.dot",
     "--no-warn-unused-cli"
   ],
+  "cmake.options.statusBarVisibility": "compact",
   "cmake.configureOnOpen": false,
   "[cmake]": {
     "editor.quickSuggestions": {
