--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ option(BUILD_CLANG_FORMAT "enable clang format" ON)
 option(ENABLE_WARNINGS "enable warnings" ON)
 option(ENABLE_WARNINGS_AS_ERRORS "enable warnings as errors" OFF)
 option(ENABLE_CLANG_TIDY "enable clang tidy" OFF)
+option(ENABLE_SANITIZE_ADDR "enable address sanitizer" ON)
 
 cmake_dependent_option(INSTALL_DOCS "install docs" OFF "NOT BUILD_DOCS" OFF)
 cmake_dependent_option(INSTALL_GRAPH "install graph" OFF "NOT BUILD_GRAPH" OFF)
@@ -77,6 +78,7 @@ include(Config)
 include(Tools)
 include(Document)
 include(Warnings)
+include(Sanitizer)
 
 if(THIS_OS_LINUX)
     set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
